Update CSS to fix overflow issue on larger screens

--- a/docs/style.css
+++ b/docs/style.css
@@ -376,7 +376,7 @@ li {
 
 @media screen and (min-width: 1020px) {
     body {
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
     div.content {
